@@ -27,7 +27,6 @@
     <connection>scm:git:git@github.com:${github.account}/game-of-life.git</connection>
     <developerConnection>scm:git:git@github.com:${github.account}/game-of-life.git</developerConnection>
     <url>https://github.com/${github.account}/game-of-life</url>
-    <tag>HEAD</tag>
   </scm>
 
   <modules>
@@ -46,7 +45,6 @@
     </extensions>
 
     <plugins>
-      <!-- Compiler -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -57,18 +55,19 @@
         </configuration>
       </plugin>
 
-      <!-- Surefire -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
+        <configuration>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+        </configuration>
         <executions>
           <execution>
             <id>unit-tests</id>
             <phase>test</phase>
             <goals><goal>test</goal></goals>
             <configuration>
-              <skip>false</skip>
               <includes>
                 <include>**/When*.java</include>
                 <include>**/*Test.java</include>
@@ -83,7 +82,6 @@
             <phase>integration-test</phase>
             <goals><goal>test</goal></goals>
             <configuration>
-              <skip>false</skip>
               <includes>
                 <include>%regex[.*integration.*]</include>
               </includes>
@@ -92,7 +90,6 @@
         </executions>
       </plugin>
 
-      <!-- JaCoCo -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -105,13 +102,12 @@
           </execution>
           <execution>
             <id>jacoco-report</id>
-            <phase>report</phase>
+            <phase>verify</phase>
             <goals><goal>report</goal></goals>
           </execution>
         </executions>
       </plugin>
 
-      <!-- Release -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
@@ -125,14 +121,12 @@
         </configuration>
       </plugin>
 
-      <!-- Deploy -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>3.1.1</version>
       </plugin>
 
-      <!-- Jelastic -->
       <plugin>
         <groupId>com.jelastic</groupId>
         <artifactId>jelastic-maven-plugin</artifactId>
@@ -149,7 +143,6 @@
   </build>
 
   <dependencies>
-    <!-- Testing -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -162,12 +155,12 @@
       <version>2.2</version>
       <scope>test</scope>
     </dependency>
-<dependency>
-  <groupId>org.mockito</groupId>
-  <artifactId>mockito-core</artifactId>
-  <version>5.11.0</version> <!-- Latest as of Nov 2025 -->
-  <scope>test</scope>
-</dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.11.0</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>io.cucumber</groupId>
       <artifactId>cucumber-java</artifactId>
@@ -182,7 +175,6 @@
   </dependencies>
 
   <profiles>
-    <!-- Development -->
     <profile>
       <id>development</id>
       <activation>
@@ -190,7 +182,6 @@
       </activation>
     </profile>
 
-    <!-- Metrics -->
     <profile>
       <id>metrics</id>
       <build>
